Add --enable-preview to use classFile API, and fix test failing.